--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,14 @@
+body{
+    font-family: 'Source Sans Pro', Arial, sans-serif;
+    margin:0;
+    padding:0;
+}
 a {
     width: 100%;
     text-decoration: none;
     color: black !important;
 }
+
 /* .link{
     background: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
