--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@ body{
 a {
     width: 100%;
     text-decoration: none;
-    /* color: black !important; */
+    color: black !important;
 }
 
 /* .link{
