--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,21 @@ body{
     margin:0;
     padding:0;
 }
+
+body::-webkit-scrollbar {
+    width: 8px;  /* 스크롤바의 너비 */
+}
+
+body::-webkit-scrollbar-thumb {
+    width: 30% ;/* 스크롤바의 길이 */
+    background: #7c8d8d; /* 스크롤바의 색상 *
+    border-radius: 10px;
+}
+
+body::-webkit-scrollbar-track {
+    background: rgba(33, 122, 244, .1);  /*스크롤바 뒷 배경 색상*/
+}
+
 a {
     width: 100%;
     text-decoration: none;
