--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,7 +21,8 @@ body::-webkit-scrollbar-track {
 a {
     width: 100%;
     text-decoration: none;
-    color: black !important;
+    /* color: black !important; */
+    color:black;
 }
 
 /* .link{
